优化立即支付、线下支付按钮，优化下单时获取不到订单号

--- a/pages/to-pay-order/index.wxml
+++ b/pages/to-pay-order/index.wxml
@@ -54,8 +54,8 @@
         <view class="heji-yuan">¥ </view>
         <view class="heji-price">{{allGoodsPrice}}</view>
       </view>
-      <button class="to-pay-btn offine" bindtap="offlinePay">线下支付</button>
-      <button class="to-pay-btn" formType="submit">立即支付</button>
+      <view class="to-pay-btn offine" bindtap="offlinePay">线下支付</view>
+      <view class="to-pay-btn" bindtap="toPay">立即付款</view>
     </view>
   </form>
   <dialog wx:if="{{dialogText}}" type="{{dialogType}}" text="{{dialogText}}" bindclose="close"></dialog>
