--- a/pages/order-details/index.wxss
+++ b/pages/order-details/index.wxss
@@ -253,10 +253,11 @@
   padding: 0 20rpx;
   font-size: 26rpx;
   text-align: center;
+  margin-left: 20rpx;
 }
 .cancel-btn{
   border: 1rpx solid #000;
-  margin-right: 40rpx;
+  /*margin-right: 40rpx;*/
 }
 .confirm-btn, .pay-btn{
   color: #fa1529;
