--- a/pages/jinxiaocun/index.wxml
+++ b/pages/jinxiaocun/index.wxml
@@ -27,10 +27,10 @@
     <view class="record-list">
       <view class="record-item" wx:for="{{recordList}}" wx:for-item="record" wx:key="{{record.inventoryId}}">
         <view class="record-item-header">
-          <image class="icon" src="/images/jxc/{{record.inventoryType?'jin':'shou'}}.png"></image>
+          <image class="icon" src="/images/jxc/{{record.inventoryType?'shou':'jin'}}.png"></image>
           <view class="goods-type">{{record.useType}}</view>
-          <view class="number">{{record.quantityStr}}</view>
-          <view class="date">{{record.date}}</view>
+          <view class="number" wx:if="{{!record.inventoryType}}">{{record.quantityStr}}</view>
+          <view class="date">{{record.saveDate}}</view>
         </view>
         <view class="record-item-content">
           <view class="row" wx:for="{{record.inventoryDetailList}}" wx:for-item="row" :key="unique">
