联系我们 地址信息字段修改，样式优化

--- a/pages/contact-us/index.wxml
+++ b/pages/contact-us/index.wxml
@@ -1,6 +1,6 @@
 <view class="contact-us container">
     <view class="info-item address">
-        <view class="address-text">公司地址：{{companyAddress}}</view>
+        <view class="address-text" title="{{companyAddress}}">公司地址：{{companyAddress}}</view>
         <view class="copy" bindtap="copyAddress">复制</view>
     </view>
     <view class="info-item phone">
