--- a/components/top-nav/index.wxss
+++ b/components/top-nav/index.wxss
@@ -12,7 +12,7 @@
   font-family: PingFang SC Bold, sans-serif;
   font-weight: bold;
   color: #666;
-  width: 120rpx;
+  /*width: 120rpx;*/
   height: 100%;
   text-align: center;
   box-sizing: border-box;
