优化地址选择，二维码遮罩层，无地址时图片展示

--- a/pages/select-address/index.wxss
+++ b/pages/select-address/index.wxss
@@ -5,6 +5,7 @@
 .no-address {
   margin: auto;
   margin-top: 280rpx;
+	text-align: center;
 }
 .no-content-text {
   font-family: PingFang SC Medium, sans-serif;
